# composable-pandas

./: README.md  pyproject.toml
composable_pandas/: str.py
tests/: test_composable_pandas.py  test_str.py
